<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnComp"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/computer"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnExtc"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/extc"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnIt"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/it"
            android:textSize="40sp" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9689904728447304/3235130710">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>